hard-gists/9228580/run.log
=== Docker Run Log for 9228580 ===
Started at: Mi 29. Okt 18:22:02 CET 2025

[2025-10-29 18:22:03] START: Running container for 9228580
[2025-10-29 18:22:03] SUCCESS: Container 0241dae96e01b825cb527c4c8e75456290de26a690670548410e253e97fa9220 started for 9228580
=== Container logs for 9228580 ===
  File "/snippet.py", line 24
    print '** "%s" has template "%s" which could not be found **' % (
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9228580 ===
[2025-10-29 18:22:05] INFO: Container 0241dae96e01b825cb527c4c8e75456290de26a690670548410e253e97fa9220 has stopped
